--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=first_rest
 server.port=8888
 
 spring.datasource.username=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/bd_for_rest
+spring.datasource.url=jdbc:postgresql://localhost:5432/for_rest
 spring.datasource.password=555
 
 spring.datasource.driver-class-name=org.postgresql.Driver
