--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8888
 
 spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/for_rest
-spring.datasource.password=555
+spring.datasource.password=
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
