--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -7,3 +7,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.datasource.username=postgres
 #spring.datasource.url=jdbc:postgresql://localhost:5432/test
 #spring.datasource.password=test
+
+#spring.datasource.username=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/test
+#spring.datasource.password=test
+#
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.show-sql=true
