--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.application.name=first_rest
 server.port=8888
 
 spring.datasource.username=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/for_rest
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/bd_for_rest
+spring.datasource.password=555
 
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.postgresql.Driver
